<resources>
    <string name="app_name">Fairy Tales</string>
    <string name="app_bar_settings">Настройки</string>
    <string name="app_bar_search">Поиск</string>
    <string name="textview_ActMain_str">TextView</string>
    <string name="textView_nameFR_str">Название</string>
    <string name="textView_textFR_str">Текст сказки</string>
    <string name="app_bar_add">Добавить сказку</string>
    <string name="author_str">Автор</string>
    <string name="text_tale_str">Текст сказки</string>
    <string name="delete_item_str">Удалить</string>
    <string name="change_item_str">Изменить</string>
    <string name="send_item_str">Отправить</string>
    <string name="cansel">Отменить</string>
    <string name="ok">Подтвердить</string>
    <string name="add_button_str">Добавить</string>
    <string name="change_button_str">Изменить</string>
    <string name="app_bar_import">Импортировать</string>
    <string name="name_class_add_and_change_fairy_tales_activity">AddAndChangeFairyTalesActivity</string>
    <string name="name_class_fairy_tales_activity">FairyTalesActivity</string>
    <string name="name_class_main_activity">MainActivity</string>
    <string name="textView_authorFR_str">Автор</string>
    <string name="editor_image_btn">editor</string>
</resources>